--- a/instructions/styles/style.css
+++ b/instructions/styles/style.css
@@ -57,8 +57,8 @@ a:hover {
 }
 
 img {
-	border:1px;
-	margin-left: 20px;
+	border:2px solid #666666;
+	margin-left: 10px;
 }
 img.logo {
 	border:0px;
