--- a/instructions/styles/style.css
+++ b/instructions/styles/style.css
@@ -41,8 +41,14 @@ h1 {
 	
 }
 
-h2, h3, h4, h5 {
-	font-size:15px;
+h2 {
+	font-size:18px;
+	color:#333;
+	margin:0px;
+	padding:0px;
+}
+h3, h4, h5{
+	font-size:16px;
 	color:#333;
 	margin:0px;
 	padding:0px;
