use some fb styles for our stuff
git-svn-id: http://plugins.svn.wordpress.org/wpbook/trunk@275898 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/theme/default/style.css
+++ b/theme/default/style.css
@@ -104,6 +104,8 @@ ul.pagenav li {
 .wpbook_share_button,.wpbook_external_post {
     margin-top: 5px;
     margin-bottom: 10px;
+    padding-left: 5px;
+    height: 25px;
 }
 
 .wpbook_share_button a ,.wpbook_invite_button a {  
